--- a/templetes/partials/footer.hbs
+++ b/templetes/partials/footer.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,37 +8,45 @@
     <title>Footer</title>
 
     <style>
-        footer{
-             background-color:rgb(99, 97, 97);
+        footer {
+            background-color: rgb(99, 97, 97);
         }
-        .foot{
+
+        .foot {
             padding: 2rem;
-           
+            margin-top: 1rem;
+
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr;
             grid-gap: 1rem;
             color: whitesmoke;
         }
-        .foot div li{
+
+        .foot div li {
             margin: .5rem;
         }
-        .foot div li a{
+
+        .foot div li a {
             text-decoration: none;
             color: aliceblue;
         }
-        .foot ul li{
+
+        .foot ul li {
             list-style: none;
 
 
         }
-        .foot hr{
+
+        .foot hr {
             width: 100%;
 
         }
-        footer #dev span{
+
+        footer #dev span {
             color: rgb(255, 174, 0);
         }
-        footer #dev{
+
+        footer #dev {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -50,62 +59,66 @@
         {
 
             .foot{
-            padding: 2rem;
-           
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 2rem;           
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr;
             grid-gap: 1rem;
             color: whitesmoke;
         }
 
         }
-        
+       
     </style>
 </head>
+
 <body>
     <footer>
         <div class="foot">
-        <div>
-            <h2>About Us</h2>
-            <p>We are helping you for finding the best place for your upcoming beautiful journey </p>
-        </div>
-        <div>
-            <h2>Branch Location</h2>
+            <div>
+                <h2>About Us</h2>
+                <p>We are helping you for finding the best place for your upcoming beautiful journey </p>
+            </div>
+            <div>
+                <h2>Branch Location</h2>
 
-            <ul>
-            <li>Bihar</li>
-            <li>Himachal Pradesh</li>
-            <li>Sikkim</li>
-            <li>Uttarakhand</li>
-            </ul>
+                <ul>
+                    <li>Bihar</li>
+                    <li>Himachal Pradesh</li>
+                    <li>Sikkim</li>
+                    <li>Uttarakhand</li>
+                </ul>
 
-        </div>
-        <div>
-            <h2>Quicks Links</h2>
-            <ul>
-                <li>Home</li>
-                <li>Book</li>
-                <li>Package</li>
-                <li>Services</li>
-                <li>Gallery</li>
-                <li>Contact</li>
-                <li>Reviews</li>
-            </ul>
-        </div>
-        <div>
-            <h2>Follow Us</h2>
-            <ul>
-                <li> <a href="">Youtube</a></li>
-                <li> <a href="">Facebook</a></li>
-                <li> <a href="">Instagram</a></li>
-                <li> <a href="">LinkedIn</a></li>
-            </ul>
-        </div>
+            </div>
+            <div>
+                <h2>Quicks Links</h2>
+                <ul>
+                    <li>Home</li>
+                    <li>Book</li>
+                    <li>Package</li>
+                    <li>Services</li>
+                    <li>Gallery</li>
+                    <li>Contact</li>
+                    <li>Reviews</li>
+                </ul>
+            </div>
+            <div>
+                <h2>Follow Us</h2>
+                <ul>
+                    <li> <a href="">Youtube</a></li>
+                    <li> <a href="">Facebook</a></li>
+                    <li> <a href="">Instagram</a></li>
+                    <li> <a href="">LinkedIn</a></li>
+                </ul>
+            </div>
         </div>
         <hr>
         <div id="dev">
-        <p>Created By <span>405_Not_Found</span> Team | All rights reserved</p>
+            <p>Created By <span>405_Not_Found</span> Team | All rights reserved</p>
         </div>
     </footer>
 </body>
+
 </html>
