--- a/templetes/views/register.hbs
+++ b/templetes/views/register.hbs
@@ -7,18 +7,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         form {
+            width: 60vw;
+            margin: auto;
             display: flex;
             flex-direction: column;
-            background-color: rgba(15, 36, 54, 0.478);
+            background-color: rgba(215, 233, 248, 0.478);
             justify-content: center;
             align-items: center;
+            box-shadow: 3px 3px 20px black;
+            padding: 1rem;
         }
 
         form input {
             margin: 10px;
             padding: 5px;
             width: 50%;
+            border-radius: 10px;
+        }
+
+        form .btn {
+            background-color: rgb(255, 174, 0);
+            border: 1px solid rgb(255, 174, 0);
+            
+        }
+        form .btn:hover {
+          box-shadow: 1px 1px 10px rgb(255, 174, 0);
+            
+        }
+        .navbar{
+            margin-bottom: 1rem;
+            background-color: rgba(0, 0, 0, 0.433);
+            color: whitesmoke;
+            padding: 1rem;
+        }
+
+        .navbar a {
+            text-decoration: none;
+            margin: .5rem;
+            color: aliceblue;
+            font-size: 1.2rem;
+        }
+
+        .navbar a:hover {
+            color: rgb(255, 174, 0);
+        }
+
+        /* -------------responsive ----------------*/
+        @media only screen and (max-width: 600px) {
+            .navbar {
+                display: flex;
+                flex-direction: column;
+                
+            }
+
+        }
+        /*Tablets [601px -> 1200px]*/
+        @media only screen and (max-width: 1200px) {
+               .navbar {
+                display: flex;
+                font-size: .5rem;
+                justify-content: center;
+                align-items: center;
+            }
+
         }
     </style>
 </head>
@@ -26,23 +82,23 @@
 <body>
 
     {{>navbar}}
+       
+        <form action="/register" method="POST">
+            <h1>Registration Form</h1>
 
+            <input type="text" name="name" id="name" placeholder="Enter Your Name">
+            <input type="text" name="gender" id="gender" placeholder="Enter Your Gender">
+            <input type="text" name="age" id="age" placeholder="Enter Your age">
+            <input type="email" name="email" id="email" placeholder="Enter Your Email">
+            <input type="password" name="password" id="password" placeholder="Enter Your Password">
+            <input type="password" name="cpassword" id="cpassword" placeholder="Enter Your Confirm Password">
 
-    <form action="/register" method="POST">
-        <h1>Registration Form</h1>
+            {{!-- <button type="submit">Submit</button> --}}
 
-        <input type="text" name="name" id="name" placeholder="Enter Your Name">
-        <input type="text" name="gender" id="gender" placeholder="Enter Your Gender">
-        <input type="text" name="age" id="age" placeholder="Enter Your age">
-        <input type="email" name="email" id="email" placeholder="Enter Your Email">
-        <input type="password" name="password" id="password" placeholder="Enter Your Password">
-        <input type="password" name="cpassword" id="cpassword" placeholder="Enter Your Confirm Password">
+            <input type="submit" value="Register" class="btn">
 
-        {{!-- <button type="submit">Submit</button> --}}
-
-        <input type="submit" value="Register">
-
-    </form>
+        </form>
+    
 
     {{>footer}}
 </body>
