--- a/templetes/views/index.hbs
+++ b/templetes/views/index.hbs
@@ -383,6 +383,7 @@
             #visitform input {
                 padding: .5rem;
                 border-radius: 7px;
+                margin: .5rem;
 
             }
 
